--- a/extension/templates/extension/AgregarPla.html
+++ b/extension/templates/extension/AgregarPla.html
@@ -1,165 +1,90 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'extension/plantillaMenu.html' %}
 {% load static %}
-<head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-<title>Modificar Juegos</title>
-
+{% block titulo %}
+<title>perfil profesor</title>
+{% endblock titulo %}
     
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" 
-    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
+{% block fonts %}
 <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&display=swap" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="{% static 'extension/./CSS/admin.css' %}"/>
-   
-  </head>
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@700&display=swap" rel="stylesheet">
+<style>
+  .nombre_manga {
+  text-align: center;
+  font-size: 15px;
+  font-weight: 600;
 
+}
+</style>
+{% endblock fonts %}    
+
+{% block fondo %}
 <body class="fondoPP">
+{% endblock fondo %} 
+ 
+{% block cuerpo %}
+<div class="container" class="fondo">
 
-    <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a href="{% url 'Login' %}"><h3>GameTopia</h3></a>
-        <a class="navbar-brand" href="{% url 'Administrador' %}"  style="margin-left: 25px;" >Usuarios</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-    
-              <li class="nav-item active">
-                  <a class="nav-link" href="{% url 'Comentarios' %}">Comentarios<span
-                          class="sr-only">(current)</span></a>
-              </li>
-    
-              <li class="nav-item active">
-                  <a class="nav-link" href="{% url 'ModificarJuegos' %}">Modificar Juegos</a>
-              </li>
-
-              <li class="nav-item active">
-                <a class="nav-link" href="{% url 'Agregar' %}">Agregar Juegos</a>
-              </li>
-
-              <li class="nav-item active">
-                <a class="nav-link" href="{% url 'AgregarRP' %}">Agregar Rol</a>
-              </li>
-
-              <li class="nav-item active">
-                <a class="nav-link" href="{% url 'AgregarPla' %}">Agregar Plataforma</a>
-              </li>
-    
-              <li class="nav-item active">
-                  <a class="nav-link disabled" href="{% url 'Login' %}">Cerrar Sesion</a>
-              </li>
-            
-          </ul>
-          
-        </nav>
-        </div><br>
-
-<div class="container">
-
-    <br>
-    <BR>
-    <br>
-    <form action="{% url 'FormAgregarP' %}" method="POST" id="formPlataforma" class="fondoform" enctype="multipart/form-data">
-        {% csrf_token %}
-            <h1 class="centrar letraLo">Agregar Plataforma</h1>
-            
-            <div class="grupo">
-                <input type="text" name="PlataformaName" id="PlataformaName" required><span class="barra" ></span>
-                <label for=""><h5>PLATAFORMA</h5></label>
-            </div>
-          <div class="row">
-            <div class="col-md-12">
-              <input type="submit" value="Enviar" class="btn btn letraLo" style="text-align: center; color: rgb(255, 255, 255); background-color: rgb(97, 97, 97); ">
-
-
-
-            </div>
-          </div>
-      </form><br>
-
-      <div class="row">
-        <div class="table-responsive">
-        <table class="table">
-            <tr>
-              <th style="text-align: center;">ID Plataforma</th>
-              <th style="text-align: center;">Nombre Plataforma</th>
-              <th style="text-align: center;">Boton</th>
-              
-            </tr>
-
-            {% for p in Plataforma %}
-            <tr>
-              <td style="text-align: center;">{{ p.id_plataforma  }}</td>
-              <td style="text-align: center;">{{ p.nombrePLA  }}</td>
-              <td style="text-align: center;"><a  href="{% url 'eliminarPlata' p.id_plataforma %}" value="Eliminar Plataforma" class="btn btn" style="color: rgb(255, 255, 255); background-color: rgb(97, 97, 97);">Eliminar Plataforma</a></td>
-            </tr>
-            
-
-            {% endfor %}
-                {% if messages %}
-                  <ul   class="" style="text-align: center; background-color: rgba(255, 255, 255, 0.908); margin-left: 12%;margin-right: 12%;">
-                {% for message in messages %}
-                  <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-                {% endfor %}
-                  </ul>
-                {% endif %}
-            
-          </table>
+  <div class="row" >
+      <div class="col-md-12 col-sm-12">
+          <h1 class="titulodestacado" >clases de {{area.nombreA}}</h1>
         </div>
-    </div><br><br>
+  </div> 
 
 
+  <div class="row">
+   {% for x in clases %}
+   <div class="col-md-4" style="text-align: center;">
+   
+  <div style="margin-bottom: 10px;margin-top: 10px; background-color: rgb(165, 162, 162);border-radius: 10px;" ><div class="nombre_manga">
+      titulo: {{x.nombreC}}
 
+    </div>
+    <div class="nombre_manga">
+     fecha: {{x.fechaC}}
 
+    </div>
+  
+    <div class="nombre_manga">
+      hora: {{x.hora}}
 
+    </div>
+    <div class="nombre_manga">
+    area de conociiento: {{x.area_id_area.nombreA}}
 
+    </div>
+    <div class="nombre_manga">
+      <a  href="{% url 'eliminarclase' x.id_clase %}" value="Modificar Perfil" class="btn btn" style="color: rgb(255, 255, 255); background-color: rgb(119, 163, 113);">entrar a clase</a>
+     
 
+     </div>
+     
+   
+  </div>
+ 
+   </div>
+    {% endfor %}
+   
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+     
+    </div>
+    
+  </div>
+ 
 </div>
-           
-         
+{% endblock cuerpo %}
+
+{% block script %}
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
-integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
-crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" 
-integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" 
-crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" 
-integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" 
-crossorigin="anonymous"></script>
-</body>  
-</html> 
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
+    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" 
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" 
+    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" 
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" 
+    crossorigin="anonymous"></script>
+{% endblock script %}     
+    
