--- a/extension/templates/extension/RegistrarseP.html
+++ b/extension/templates/extension/RegistrarseP.html
@@ -23,6 +23,33 @@
 {% endblock fondo %} 
  
 {% block cuerpo %}
+<div><nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a href="{% url 'Login' %}"><h3>Se busca profe</h3></a>
+  <a class="navbar-brand" href="{% url 'Pantalla' %}" style="margin-left: 25px;" >Inicio</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'Login' %}">Iniciar Sesión<span
+                class="sr-only">(current)</span></a>
+    </li>
+
+        <li class="nav-item active">
+            <a class="nav-link" href="{% url 'Registrarse' %}">Registrate como alumno<span
+                    class="sr-only">(current)</span></a>
+        </li>
+
+        <li class="nav-item active">
+            <a class="nav-link" href="{% url 'RegistrarseP' %}">Registrate como profesor</a>
+        </li>
+    </ul>
+  </nav>
+  </div><br>
+
 
 <div class="container" class="fondo">
   
