--- a/extension/templates/extension/Login.html
+++ b/extension/templates/extension/Login.html
@@ -68,13 +68,11 @@
                           <input type="password" name="loginPassword" id="loginPassword"><span class="barra"></span>
                           <label for=""><h5>Contraseña</h5></label>
                       </div>
-                      <div class="row">
-                        <div class="col-md-6 col-sm-12"><a class="cu1 , centrar" href="{% url 'Registrarse' %}"><p >¿No tienes cuenta Registrate?</p></a></div>
-                        <div class="col-md-6 col-sm-12"><a class="cu1 , centrar" href="{% url 'Olvidado' %}"><p >¿Olvidaste tu contraseña?</p></a></div>
-                      </div>
+                        <a class="cu1 , centrar" href="{% url 'Olvidado' %}"><p style="margin-top: -20px;" >¿Olvidaste tu contraseña?</p></a><br>
+                      
 
                       
-                      <a class="cu1 , centrar" href="{% url 'Pantalla' %}"><p style="text-align: center;">Volver a lobby</p></a><br>
+                      
                     
                     <div class="row">
                       <div class="col-md-6">
