--- a/extension/templates/extension/ModificarJuegos.html
+++ b/extension/templates/extension/ModificarJuegos.html
@@ -25,93 +25,54 @@
 
 <body class="fondoPP">
 
-    <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a href="{% url 'Login' %}"><h3>GameTopia</h3></a>
-        <a class="navbar-brand" href="{% url 'Administrador' %}"  style="margin-left: 25px;" >Usuarios</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-    
-              <li class="nav-item active">
-                  <a class="nav-link" href="{% url 'Comentarios' %}">Comentarios<span
-                          class="sr-only">(current)</span></a>
-              </li>
-    
-              <li class="nav-item active">
-                  <a class="nav-link" href="{% url 'ModificarJuegos' %}">Modificar Juegos</a>
-              </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="{% url 'Agregar' %}">Agregar Juegos</a>
-              </li>
-
-              <li class="nav-item active">
-                <a class="nav-link" href="{% url 'AgregarRP' %}">Agregar Rol</a>
-              </li>
-
-              <li class="nav-item active">
-                <a class="nav-link" href="{% url 'AgregarPla' %}">Agregar Plataforma</a>
-              </li>
-    
-              <li class="nav-item active">
-                  <a class="nav-link disabled" href="{% url 'Login' %}">Cerrar Sesion</a>
-              </li>
+  <div class="container" class="fondo">
+    <div class="row" style="margin-top: 50px;">
+        <div class="col-md-12 col-sm-12">
             
-          </ul>
-          
-        </nav>
-        </div><br>
+            <form action="{% url 'formAgregarJ' %}" method="POST" name="formModificar" id="formModificar" class="fondoform" enctype="multipart/form-data">
+              {% csrf_token %}
+              <h1  class="centrar , letraLo ,cu ">Modificar perfil</h1>
 
-<div class="container">
+              <div class="grupo">
+                <input type="text" readonly name="emailM" id="emailM" value="{{ olvidado.correo }}"><span class="barra" ></span>
+                <label for=""><h5>Tu correo es:</h5></label>
+              </div>
+                
+                <h4 class="letraLo , cu" >Cambiar contraseña:</h4>
 
+                <div class="grupo">
+                  <input type="text" readonly ="claveA"  id="claveA" value="{{ olvidado.clave }}"><span class="barra" ></span>
+                  <label for=""><h5>Contraseña Actual</h5></label>
+              </div>
+                <div class="grupo">
+                  <input type="password" name="passwordN"  id="claveN"><span class="barra" ></span>
+                  <label for=""><h5>Contraseña Nueva</h5></label>
+              </div>
+              <div class="grupo">
+                      <input type="password" name="con_passwordM"  id="claveCN"><span class="barra"  ></span>
+                      <label for=""><h5>Confirmar Contraseña</h5></label>
+                  </div>
 
-      <div class="row" style="text-align: center;margin-top: 5%;">
-          <div class="col-md-12 col-sm-12">
-              <h1 class="titulo">Modificar</h1><br>
-          </div>
-      </div><br>
+                
 
-     
-      <div class="row">
-          <div class="table-responsive">
-          <table class="table  centrar  letraVJ" style="background-color: rgb(255, 255, 255);" id="table">
-              <tr>
-                <th>VIDEOJUEGOS</th>
-                <TH>BOTONES</TH>
-              </tr>
-              {% for l in ModificarV %}
-              <tr>
-                <td>
-                  
-                  <img src="{{ l.foto.url }}" alt="No foto" style="width: 15%;height: 15%;"><BR>
-                    <h5 >{{ l.nombreV }}</h5>
-                </td>
-                <td>
-                  <br><br><a href="{% url 'MJuegos' l.id_videojuego %}" class="btn btn-primary" >Modificar</a><br><br><br>
-                  <a href="{% url 'eliminarJuego' l.id_videojuego %}" class="btn btn-danger">Eliminar</a>
-                </td>
-              </tr>
-              {% endfor %}
+                <div class="row">
+                  <div class="col-md-6">
+                    <input type="submit" value="Enviar" class="btn btn letraLo" style="text-align: center; color: rgb(255, 255, 255); background-color: rgb(97, 97, 97); margin-left: auto;">
+                  </div>
+                  <div class="col-md-6">
 
-              {% if messages %}
-                <ul   class="" style="text-align: center; background-color: rgba(255, 255, 255, 0.908); margin-left: 12%;margin-right: 12%;">
-              {% for message in messages %}
-                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-              {% endfor %}
-                </ul>
-              {% endif %}  
-              
+                    <input type="reset" value="Limpiar" class="btn btn letraLo" style="text-align: center; color: rgb(255, 255, 255); background-color: rgb(97, 97, 97); margin-left: auto;">
+                  </div>
+                </div><br>
 
+                <p class="warnings" id="mensaje_modificarP"></p>
+                
+            </form>
+        </div></div><br><br>
+  
+      
+</div> 
 
-      </table>
-      </div>
-      </div><br>
-
-
-  </div>
-</table>
 
 
 
