cambiar rol fondos

--- a/extension/static/extension/CSS/cambios.css
+++ b/extension/static/extension/CSS/cambios.css
@@ -308,7 +308,7 @@ body {
 }
 
 .fondoform{
-  background: rgba(255, 255, 255, 0.9);
+  background: rgb(255, 255, 255);
   padding: 40px 0;
   box-shadow: 0 0 6px 0 #ffffffcc;
   border-radius: 10px;
