--- a/extension/templates/extension/Pantalla.html
+++ b/extension/templates/extension/Pantalla.html
@@ -16,7 +16,7 @@
 {% endblock fonts %}    
 
 {% block fondo %}
-<body class="fondoPP">
+<body style="background-image: url(../../static/extension/img/PantallaPrincipal/fondo3.jpg) ;background-repeat: no-repeat;background-size:cover;">
 {% endblock fondo %} 
 
 
@@ -71,12 +71,12 @@
         <div class="row">
         <div class="col-md-6 col-sm-12">
             <p style="text-align: center;"><img src="{% static 'extension/img/Perfiles/lobby1.jpg' %}" alt="no foto" style="width:400px;height:400px;"></p>
-            <h3 style="text-align: center;color: rgb(3, 3, 3);background-color: #ffffffc9;">Es una página web multiplataforma en línea que te ayudará a aprender cosas nuevas todos los días.</h3>
+            <h4 style="text-align: center;color: rgb(3, 3, 3);background-color: #ffffffc9;">Es una página web multiplataforma en línea que te ayudará a aprender cosas nuevas todos los días.</h4>
         </div>
 
         <div class="col-md-6 col-sm-12">
             <p style="text-align: center;"><img src="{% static 'extension/img/Perfiles/lobby2.jpg' %}" alt="no foto" style="width:400px;height:400px;"></p>
-            <h3 style="text-align: center;color: rgb(3, 3, 3);background-color: #ffffffc9;">Gracias a Se Busca Profe, no tendrás que preocuparte por cursos sin sentido. Aquí podrás elegir las clases en las que quieras participar.</h3>
+            <h4 style="text-align: center;color: rgb(3, 3, 3);background-color: #ffffffc9;">Gracias a Se Busca Profe, no tendrás que preocuparte por cursos sin sentido. Aquí podrás elegir las clases en las que quieras participar.</h4>
         </div>
 
         </div>
