--- a/extension/templates/extension/administrador.html
+++ b/extension/templates/extension/administrador.html
@@ -20,10 +20,10 @@
    
   </head>
 
-<body class="fondoPP">
+<body style="background-image: url(../../static/extension/img/PantallaPrincipal/fondo3.jpg) ;background-repeat: no-repeat;background-size:cover;">
   
   <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a href="{% url 'Login' %}"><h3>GameTopia</h3></a>
+    <a href="{% url 'Login' %}"><h3>Se busca Profe</h3></a>
     <a class="navbar-brand" href="{% url 'Administrador' %}"  style="margin-left: 25px;" >Usuarios</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -31,26 +31,6 @@
     
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-
-          <li class="nav-item active">
-              <a class="nav-link" href="{% url 'Comentarios' %}">Comentarios
-                <span class="sr-only">(current)</span></a>
-          </li>
-
-          <li class="nav-item active">
-              <a class="nav-link" href="{% url 'ModificarJuegos' %}">Modificar Juegos</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="{% url 'Agregar' %}">Agregar Juegos</a>
-          </li>
-
-          <li class="nav-item active">
-            <a class="nav-link" href="{% url 'AgregarRP' %}">Agregar Rol</a>
-          </li>
-
-          <li class="nav-item active">
-            <a class="nav-link" href="{% url 'AgregarPla' %}">Agregar Plataforma</a>
-          </li>
 
           <li class="nav-item active">
               <a class="nav-link disabled" href="{% url 'Login' %}">Cerrar Sesion</a>
@@ -79,7 +59,6 @@
                     <tr>
                       <th>Nombre</th>
                       <th>Correo</th>
-                      <th>Celular</th>
                       <th>Fecha de Nacimiento</th>
                       <th>Rol</th>
                       <th>Boton</th>
@@ -89,8 +68,6 @@
                     <tr>
                       <td>{{ u.nombreU }} {{ u.apellido }}</td>
                       <td>{{ u.correo}}</td>
-
-                      <td>{{u.telefono}}</td>
                       <td>{{u.fechaU}}</td>
                       <td>{{u.rol_id_rol}}</td>
                       <td><a  href="{% url 'CambiarRol' u.idUsuario %}" value="Modificar Perfil" class="btn btn" style="color: rgb(255, 255, 255); background-color: rgb(97, 97, 97);">Modificar</a></td>
