--- a/extension/templates/extension/AgregarPla.html
+++ b/extension/templates/extension/AgregarPla.html
@@ -52,12 +52,12 @@
 
     </div>
     <div class="nombre_manga">
-    area de conociiento: {{x.area_id_area.nombreA}}
+    area de conocimiento: {{x.area_id_area.nombreA}}
 
     </div>
     <div class="nombre_manga">
       <a  href="{% url 'eliminarclase' x.id_clase %}" value="Modificar Perfil" class="btn btn" style="color: rgb(255, 255, 255); background-color: rgb(119, 163, 113);">entrar a clase</a>
-     
+      <a  href="{% url 'Comentarios' x.id_clase %}" value="Modificar Perfil" class="btn btn" style="color: rgb(255, 255, 255); background-color: rgb(119, 163, 113);">ver comentarios</a>
 
      </div>
      
