--- a/extension/templates/extension/ver perfil.html
+++ b/extension/templates/extension/ver perfil.html
@@ -50,7 +50,7 @@
 {% if usuario.rol_id_rol.id_rol == 1 %}
 <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a href="{% url 'Login' %}"><h3>Se busca profe</h3></a>
-  <a class="navbar-brand" href="{% url 'AgregarRP' %}" style="margin-left: 25px;" >Buscar Clase</a>
+  <a class="navbar-brand" href="{% url 'AgregarRP' %}" style="margin-left: 25px;" >Ver materias</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
