--- a/extension/templates/extension/AgregarPla.html
+++ b/extension/templates/extension/AgregarPla.html
@@ -21,10 +21,38 @@
 {% endblock fonts %}    
 
 {% block fondo %}
-<body class="fondoPP">
+<body style="background-image: url(../../static/extension/img/PantallaPrincipal/fondo3.jpg) ;background-repeat: no-repeat;background-size:cover;">
 {% endblock fondo %} 
  
 {% block cuerpo %}
+{% if usuario.rol_id_rol.id_rol == 1 %}
+<div><nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a href="{% url 'Login' %}"><h3>Se busca profe</h3></a>
+  <a class="navbar-brand" href="{% url 'VerPerfil' %}" style="margin-left: 25px;" >VerPerfil</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'AgregarRP' %}">Ver materias<span
+                class="sr-only">(current)</span></a>
+    </li>
+
+
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'Login' %}">Cerrar Sesión<span
+                class="sr-only">(current)</span></a>
+    </li>
+
+    </ul>
+  </nav>
+  </div><br>
+{% endif %}
+
+
 <div class="container" class="fondo">
 
   <div class="row" >
