--- a/extension/templates/extension/AgregarRP.html
+++ b/extension/templates/extension/AgregarRP.html
@@ -21,7 +21,8 @@
 {% endblock fonts %}    
 
 {% block fondo %}
-<body class="fondoPP">
+<body style="background-image: url(../../static/extension/img/PantallaPrincipal/fondo3.jpg) ;background-repeat: no-repeat;background-size:cover;">
+
 {% endblock fondo %} 
  
 {% block cuerpo %}
@@ -36,6 +37,11 @@
   
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
+      
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'AgregarRP' %}">Ver materias<span
+                class="sr-only">(current)</span></a>
+    </li>
 
       <li class="nav-item active">
         <a class="nav-link" href="{% url 'Login' %}">Cerrar Sesión<span
